[Mac][Material Design] Fix regression with initial bookmark bar text.

[Mac][Material Design] Fix regression with initial bookmark bar text.

When you have an empty bookmarks bar, the bar displays a message about
adding bookmarks. With the switch to Material Design and the addition
of an NSVisualEffectView, the textfields' opaque ancestor was no
longer opaque, messing up subpixel anti-aliasing.

This cl changes the BookmarkBarToolbarView's isOpaque: method to
always return YES. The BookmarkBarToolbarView was in fact always
opaque, so returning YES is correct. Doing so causes the
BookmarkBarToolbarView's to be the textfields' opaque ancestor,
leading to correctly-drawn text.

R=tapted@chromium.org
BUG=617550,617856

Review-Url: https://codereview.chromium.org/2061353002
Cr-Commit-Position: refs/heads/master@{#401391}

Former-commit-id: eadf1aa099669f7a232ee8deed94d5b9d2da14a8